k8s/kafka_connect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect-svc
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connect-svc
  template:
    metadata:
      labels:
        app: kafka-connect-svc
    spec:
      containers:
        - name: kafka-connect-svc
          image: confluentinc/cp-kafka-connect:7.6.0
          ports:
            - containerPort: 8083
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          readinessProbe:
            tcpSocket:
              port: 8083
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect-svc
  namespace: app
spec:
  selector:
    app: kafka-connect-svc
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
