k8s/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: kafka-practice/producer:v1
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: producer
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: producer
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
