k8s/schema_registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry-svc
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry-svc
  template:
    metadata:
      labels:
        app: schema-registry-svc
    spec:
      containers:
        - name: schema-registry-svc
          image: confluentinc/cp-schema-registry:7.6.0
          ports:
            - containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry-svc
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: schema-registry-svc
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
