k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:
    - host: kafka-ui.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
    - host: producer.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: producer-svc
                port:
                  number: 5001
